<resources>
    <string name="app_name">Employees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="number_one">1</string>
    <string name="search">Search</string>
    <string name="enter_user_id_here">Enter User Id here...</string>
    <string name="user_id_not_found">User Id Not Found</string>
    <string name="user_idnot_empty">User Id cannot be empty</string>
    <string name="nothing_found">Nothing Found</string>
</resources>